[package]
edition = "2021"
name = "astro-squeeze"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
brotli = "7.0.0"
flate2 = "1.1.0"
log = "0.4.26"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.12.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
walkdir = "2.5.0"
futures = "0.3.31"
thiserror = "2.0.11"
tokio-stream = {  version = "0.1.17", features = [ "fs", "io-util" ] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
